Fix size and alignment on new default thumbnails

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -4709,22 +4709,22 @@ form input[type=radio] {margin: 2px .5em 0 0; }
 
     &.nsfw {
         background-image: url(../thumbnail-icon-nsfw.png); /* SPRITE */
-        height: 70px;
+        height: 50px;
     }
 
     &.self {
         background-image: url(../thumbnail-icon-text.png); /* SPRITE */
-        height: 70px;
+        height: 50px;
     }
 
     &.image {
         background-image: url(../thumbnail-icon-image.png); /* SPRITE */
-        height: 70px;
+        height: 50px;
     }
 
     &.default {
         background-image: url(../thumbnail-icon-link.png); /* SPRITE */
-        height: 70px;
+        height: 50px;
     }
 }
 
